ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/AssetWarrantyId__c.field-meta.xml
<CustomField>
    <fullName>AssetWarrantyId__c</fullName>
    <label>Asset Warranty ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Asset Warranty ID</labelOverride>
        <masterLabel>Asset Warranty ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>