ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/BusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId__c</fullName>
    <label>Business Hours ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Business Hours ID</labelOverride>
        <masterLabel>Business Hours ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>