ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/ContractLineItemId__c.field-meta.xml
<CustomField>
    <fullName>ContractLineItemId__c</fullName>
    <label>Contract Line Item ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Contract Line Item ID</labelOverride>
        <masterLabel>Contract Line Item ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>