ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/External_ID_c__c.field-meta.xml
<CustomField>
    <fullName>External_ID_c__c</fullName>
    <label>External ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>External ID</labelOverride>
        <masterLabel>External ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>