ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/IsPerIncident__c.field-meta.xml
<CustomField>
    <fullName>IsPerIncident__c</fullName>
    <label>Per Incident</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Per Incident</labelOverride>
        <masterLabel>Per Incident</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>