ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/RemainingCases__c.field-meta.xml
<CustomField>
    <fullName>RemainingCases__c</fullName>
    <label>Remaining Cases</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Remaining Cases</labelOverride>
        <masterLabel>Remaining Cases</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>