ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/RemainingWorkOrders__c.field-meta.xml
<CustomField>
    <fullName>RemainingWorkOrders__c</fullName>
    <label>Remaining Work Orders</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Remaining Work Orders</labelOverride>
        <masterLabel>Remaining Work Orders</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>