ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/SDO_Service_Primary_c__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Primary_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Primary</labelOverride>
        <masterLabel>Primary</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>