ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractId__c</fullName>
    <label>Service Contract ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Service Contract ID</labelOverride>
        <masterLabel>Service Contract ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>