ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/SlaProcessId__c.field-meta.xml
<CustomField>
    <fullName>SlaProcessId__c</fullName>
    <label>Entitlement Process ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Entitlement Process ID</labelOverride>
        <masterLabel>Entitlement Process ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>