ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/SvcApptBookingWindowsId__c.field-meta.xml
<CustomField>
    <fullName>SvcApptBookingWindowsId__c</fullName>
    <label>Operating Hour ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Operating Hour ID</labelOverride>
        <masterLabel>Operating Hour ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>