ps-datacloud/main/default/objects/Entitlement_Home__dlm/fields/WorkOrdersPerEntitlement__c.field-meta.xml
<CustomField>
    <fullName>WorkOrdersPerEntitlement__c</fullName>
    <label>Work Orders Per Entitlement</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Work Orders Per Entitlement</labelOverride>
        <masterLabel>Work Orders Per Entitlement</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>